--- a/client/components/main/header.jade
+++ b/client/components/main/header.jade
@@ -44,4 +44,4 @@ template(name="header")
             img(src="{{pathFor '/km-wekan-logo-header.png'}}" alt="Wekan")
         else
           a.wekan-logo(href="{{pathFor 'home'}}" title="{{_ 'header-logo-title'}}")
-            img(src="{{pathFor '/wekan-logo-header.png'}}" alt="Wekan")
+            img(src="{{pathFor '/km-wekan-logo-header.png'}}" alt="Wekan")
