--- a/client/components/cards/cardDetails.styl
+++ b/client/components/cards/cardDetails.styl
@@ -69,8 +69,9 @@
 
     .card-details-item
       &.card-details-item-labels,
-      &.card-details-item-members
-        width: 50%
+      &.card-details-item-members,
+	  &.card-details-item-price
+        width: 33%
         flex-shrink: 1
 
   .card-details-item-title
@@ -81,6 +82,10 @@
     padding-top: 5px
     padding-bottom: 5px
 
+  .card-price
+    padding-top: 5px
+    padding-bottom: 5px
+	
   .activities
     padding-top: 10px
 
