--- a/client/components/cards/cardDetails.jade
+++ b/client/components/cards/cardDetails.jade
@@ -26,8 +26,8 @@ template(name="cardDetails")
         if currentUser.isBoardMember
           a.member.add-member.card-details-item-add-button.js-add-members(title="{{_ 'card-members-title'}}")
             i.fa.fa-plus
-
-      .card-details-item.card-details-item-labels
+  
+    .card-details-item.card-details-item-labels
         h3.card-details-item-title {{_ 'labels'}}
         a(class="{{#if currentUser.isBoardMember}}js-add-labels{{else}}is-disabled{{/if}}" title="{{_ 'card-labels-title'}}")
           each labels
@@ -38,11 +38,11 @@ template(name="cardDetails")
 			
 	  .card-details-item.card-details-item-price
         h3.card-details-item-title {{_ 'price'}}
-        a(class="{{#if currentUser.isBoardMember}}js-add-prices{{else}}is-disabled{{/if}}" title="{{_ 'card-edit-prices'}}")
+        a(class="{{#if currentUser.isBoardMember}}js-add-prices{{else}}is-disabled{{/if}}" title="{{_ 'card-labels-title'}}")
           each prices
             span.card-price(class="card-price-{{color}}" title=price)= price
         if currentUser.isBoardMember
-          a.card-label.add-label.js-add-prices(title="{{_ 'card-edit-prices'}}")
+          a.card-label.add-label.js-add-prices(title="{{_ 'card-labels-title'}}")
             i.fa.fa-plus
 
     //- XXX We should use "editable" to avoid repetiting ourselves
@@ -90,7 +90,7 @@ template(name="cardDetailsActionsPopup")
   ul.pop-over-list
     li: a.js-members {{_ 'card-edit-members'}}
     li: a.js-labels {{_ 'card-edit-labels'}}
-	li: a.js-prices {{_ 'card-edit-prices'}}
+    li: a.js-labels {{_ 'card-edit-labels'}}
     li: a.js-attachments {{_ 'card-edit-attachments'}}
   hr
   ul.pop-over-list
