--- a/client/components/cards/cardDetails.jade
+++ b/client/components/cards/cardDetails.jade
@@ -36,6 +36,15 @@ template(name="cardDetails")
           a.card-label.add-label.js-add-labels(title="{{_ 'card-labels-title'}}")
             i.fa.fa-plus
 
+      .card-details-item.card-details-item-prices
+        h3.card-details-item-title {{_ 'prices'}}
+        a(class="{{#if currentUser.isBoardMember}}js-add-prices{{else}}is-disabled{{/if}}" title="{{_ 'card-prices-title'}}")
+          each prices
+            span.card-price(class="card-price-{{color}}" title=price)= price
+        if currentUser.isBoardMember
+          a.card-label.add-price.js-add-prices(title="{{_ 'card-prices-title'}}")
+            i.fa.fa-plus
+	
     //- XXX We should use "editable" to avoid repetiting ourselves
     if currentUser.isBoardMember
       h3.card-details-item-title {{_ 'description'}}
@@ -81,6 +90,7 @@ template(name="cardDetailsActionsPopup")
   ul.pop-over-list
     li: a.js-members {{_ 'card-edit-members'}}
     li: a.js-labels {{_ 'card-edit-labels'}}
+	li: a.js-prices {{_ 'card-edit-prices'}}
     li: a.js-attachments {{_ 'card-edit-attachments'}}
   hr
   ul.pop-over-list
