--- a/client/components/cards/cardDetails.jade
+++ b/client/components/cards/cardDetails.jade
@@ -37,7 +37,7 @@ template(name="cardDetails")
             i.fa.fa-plus
 
       .card-details-item.card-details-item-prices
-        h3.card-details-item-title {{_ 'prices'}}
+        h3.card-details-item-title {{_ 'price'}}
         a(class="{{#if currentUser.isBoardMember}}js-add-prices{{else}}is-disabled{{/if}}" title="{{_ 'card-prices-title'}}")
           each prices
             span.card-price(class="card-price-{{color}}" title=price)= price
