--- a/client/components/cards/prices.jade
+++ b/client/components/cards/prices.jade
@@ -26,6 +26,8 @@ template(name="deletepricePopup")
 
 template(name="cardpricesPopup")
   ul.edit-prices-pop-over
+  a.quiet-button.full.js-add-price {{_ 'price-create'}}
+
     each board.prices
       li
         a.card-price-edit-button.fa.fa-pencil.js-edit-price
