--- a/client/components/cards/minicard.styl
+++ b/client/components/cards/minicard.styl
@@ -80,7 +80,17 @@
       height: @width
       border-radius: 2px
       margin-left: 3px
+	  
+  .minicard-prices
+    float: right
+    display: flex
 
+    .minicard-price
+      width: 11px
+      height: @width
+      border-radius: 2px
+      margin-left: 3px
+	  
   .badges
     float: left
     margin-top: 7px
