--- a/client/components/cards/minicard.styl
+++ b/client/components/cards/minicard.styl
@@ -82,10 +82,11 @@
       margin-left: 3px
 	  
   .minicard-prices
+    float: right
     display: flex
 
     .minicard-price
-      width: 11px
+      width: 50px
       height: @width
       border-radius: 2px
       margin-left: 3px
