--- a/client/components/cards/minicard.jade
+++ b/client/components/cards/minicard.jade
@@ -1,4 +1,5 @@
 template(name="minicard")
+  
   .minicard
     if cover
       .minicard-cover
@@ -6,7 +7,8 @@ template(name="minicard")
     if prices
       .minicard-prices
         each prices
-          .minicard-price(class="card-price-{{color}}" title="{{name}}") = name		
+          .minicard-price(class="card-price-{{color}}" title="{{name}}") 
+		  = name		
     if labels
       .minicard-labels
         each labels
