--- a/client/components/cards/prices.styl
+++ b/client/components/cards/prices.styl
@@ -45,34 +45,64 @@
 
 .card-price-green
   background-color: #3cb500
+  text-align: center
+  line-height: 30px
+  color: white
 
 .card-price-yellow
   background-color: #fad900
+  text-align: center
+  line-height: 30px
+  color: white
 
 .card-price-orange
   background-color: #ff9f19
+  text-align: center
+  line-height: 30px
+  color: white
 
 .card-price-red
   background-color: #eb4646
-
+  text-align: center
+  line-height: 30px
+  color: white
+  
 .card-price-purple
   background-color: #a632db
-
+  text-align: center
+  line-height: 30px
+  color: white
+  
 .card-price-blue
   background-color: #0079bf
-
+  text-align: center
+  line-height: 30px
+  color: white
+  
 .card-price-pink
   background-color: #ff78cb
-
+  text-align: center
+  line-height: 30px
+  color: white
+  
 .card-price-sky
   background-color: #00c2e0
-
+  text-align: center
+  line-height: 30px
+  color: white
+  
 .card-price-black
   background-color: #4d4d4d
-
+  text-align: center
+  line-height: 30px
+  color: white
+  
 .card-price-lime
   background-color: #51e898
-
+  text-align: center
+  line-height: 30px
+  color: white
+  
 .edit-price,
 .create-price
   .card-price
