--- a/client/components/cards/minicard.jade
+++ b/client/components/cards/minicard.jade
@@ -6,7 +6,7 @@ template(name="minicard")
     if prices
       .minicard-prices
         each prices
-          .minicard-price(class="card-price-{{color}}" title="{{name}}"){{name}}	
+          .minicard-price(class="minicard-price-{{color}}" title="{{name}}"){{name}}	
     if labels
       .minicard-labels
         each labels
