--- a/client/components/cards/prices.styl
+++ b/client/components/cards/prices.styl
@@ -45,47 +45,77 @@
 
 .card-price-green
   background-color: #3cb500
+  
+.card-price-yellow
+  background-color: #fad900
+
+.card-price-orange
+  background-color: #ff9f19
+
+.card-price-red
+  background-color: #eb4646
+
+.card-price-purple
+  background-color: #a632db
+  
+.card-price-blue
+  background-color: #0079bf
+
+.card-price-pink
+  background-color: #ff78cb
+  
+.card-price-sky
+  background-color: #00c2e0
+
+.card-price-black
+  background-color: #4d4d4d
+
+.card-price-lime
+  background-color: #51e898
+
+.minicard-price-green
+  background-color: #3cb500
   text-align: center
   line-height: 30px
   color: white
 
-.card-price-yellow
+.minicard-price-yellow
   background-color: #fad900
   text-align: center
   line-height: 30px
   color: white
 
-.card-price-orange
+.minicard-price-orange
   background-color: #ff9f19
   text-align: center
   line-height: 30px
   color: white
 
-.card-price-red
+.minicard-price-red
   background-color: #eb4646
   text-align: center
   line-height: 30px
   color: white
   
-.card-price-purple
+.minicard-price-purple
   background-color: #a632db
   text-align: center
   line-height: 30px
   color: white
   
-.card-price-blue
+.minicard-price-blue
   background-color: #0079bf
   text-align: center
   line-height: 30px
   color: white
   
-.card-price-pink
+.minicard-price-pink
   background-color: #ff78cb
   text-align: center
   line-height: 30px
   color: white
   
-.card-price-sky
+.minicard-price-sky
   background-color: #00c2e0
   text-align: center
   line-height: 30px
@@ -102,7 +132,7 @@
   text-align: center
   line-height: 30px
   color: white
-  
+ 
 .edit-price,
 .create-price
   .card-price
