--- a/client/components/cards/prices.styl
+++ b/client/components/cards/prices.styl
@@ -76,58 +76,58 @@
 .minicard-price-green
   background-color: #3cb500
   text-align: center
-  line-height: 30px
+  line-height: 45px
   color: white
 
 .minicard-price-yellow
   background-color: #fad900
   text-align: center
-  line-height: 30px
+  line-height: 45px
   color: white
 
 .minicard-price-orange
   background-color: #ff9f19
   text-align: center
-  line-height: 30px
+  line-height: 45px
   color: white
 
 .minicard-price-red
   background-color: #eb4646
   text-align: center
-  line-height: 30px
+  line-height: 45px
   color: white
   
 .minicard-price-purple
   background-color: #a632db
   text-align: center
-  line-height: 30px
+  line-height: 45px
   color: white
   
 .minicard-price-blue
   background-color: #0079bf
   text-align: center
-  line-height: 30px
+  line-height: 45px
   color: white
   
 .minicard-price-pink
   background-color: #ff78cb
   text-align: center
-  line-height: 30px
+  line-height: 45px
   color: white
   
 .minicard-price-sky
   background-color: #00c2e0
   text-align: center
-  line-height: 30px
+  line-height: 45px
   color: white
   
-.card-price-black
+.minicard-price-black
   background-color: #4d4d4d
   text-align: center
   line-height: 30px
   color: white
   
-.card-price-lime
+.minicard-price-lime
   background-color: #51e898
   text-align: center
   line-height: 30px
