--- a/client/components/main/header.jade
+++ b/client/components/main/header.jade
@@ -41,7 +41,7 @@ template(name="header")
           the list of all boards.
         if isSandstorm
           .wekan-logo
-            img(src="{{pathFor '/km_gold'}}" alt="Wekan")
+            img(src="{{pathFor '/km_gold.png'}}" alt="Wekan")
         else
           a.wekan-logo(href="{{pathFor 'home'}}" title="{{_ 'header-logo-title'}}")
-            img(src="{{pathFor '/km_gold'}}" alt="Wekan")
+            img(src="{{pathFor '/km_gold.png'}}" alt="Wekan")
