--- a/client/components/lists/listHeader.jade
+++ b/client/components/lists/listHeader.jade
@@ -33,3 +33,12 @@ template(name="boardLists")
           a.disabled {{title}} ({{_ 'current'}})
         else
           a.js-select-list= title
+		  
+template(name="allLists")
+  ul.pop-over-list
+    each currentBoard.allLists
+      li
+        if($eq ../_id _id)
+          a.disabled {{title}} ({{_ 'current'}})
+        else
+          a.js-select-list= title
