--- a/client/components/cards/cardDetails.jade
+++ b/client/components/cards/cardDetails.jade
@@ -100,7 +100,7 @@ template(name="cardDetailsActionsPopup")
     li: a.js-more {{_ 'cardMorePopup-title'}}
 
 template(name="moveCardPopup")
-  +boardLists
+  +allLists
 
 template(name="cardMembersPopup")
   ul.pop-over-list.js-card-member-list
