--- a/client/components/lists/listHeader.jade
+++ b/client/components/lists/listHeader.jade
@@ -36,7 +36,7 @@ template(name="boardLists")
 		  
 template(name="allLists")
   ul.pop-over-list
-    each currentBoard.allLists
+    each currentBoard.allListsss
       li
         if($eq ../_id _id)
           a.disabled {{title}} ({{_ 'current'}})
