--- a/client/components/sidebar/sidebarFilters.jade
+++ b/client/components/sidebar/sidebarFilters.jade
@@ -85,5 +85,5 @@ template(name="disambiguateMultiMemberPopup")
   button.wide.js-assign-member {{_ 'assign-member'}}
 
 template(name="moveSelectionPopup")
-  +allLists
+  +boardLists
 
